# vision2021

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
data/ballConfigs/: stressBall.xml
data/cameraConfigs/: example.xml  iMacCamera.xml
data/targetConfigs/: example.xml  indexCard.xml
data/thresholdingConfigs/: iMacStressBall.xml
doc/: Doxyfile
doc/html/: annotated.html  camera_8hpp.html  camera_8hpp_source.html  classes.html  contour_processing_8hpp.html  contour_processing_8hpp_source.html  conversions_8hpp.html  conversions_8hpp_source.html  dir_1563a38af0d3a5e4a6330d6d45e9792a.html  dir_1bc3ef213e25b5b7f04cc6fc111a30cc.html  dir_2d5c29789467ea7c94b69ad17ffddfbd.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_53e15b65fb71bbb3a6cd6c0e4b4c07b4.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_67a2392c225907a020a37a79427f4db8.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b0bf4719bc8da449be442b1ead659ac7.html  dir_b48a667e09a0511e10a47e47f5acd3b6.html  dir_bc0a1a3cfe30c1c140baad72455228e6.html  dir_c65abf3f65ff782ebda822180b73d629.html  dir_cf96e8a7f3e8403e0c1f62745735f741.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_dc1db25376c64edf07fdc99b5118e152.html  dir_f8a56129b8ba274254018282239a0f1b.html  drawing_8hpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  image_processing_8hpp.html  image_processing_8hpp_source.html  index.html  md__r_e_a_d_m_e.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacerv.html  namespaces.html  pages.html  structrv_1_1_ball-members.html  (+17 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  (+8 more)
include/rambunctionVision/: camera.hpp  contourProcessing.hpp  conversions.hpp  drawing.hpp  imageProcessing.hpp
src/rambunctionVision/: CMakeLists.txt  contourProcessing.cpp  conversions.cpp  drawing.cpp  imageProcessing.cpp
src/tools/cameraCalibration/: CMakeLists.txt  main.cpp
src/tools/hsvTunning/: CMakeLists.txt  main.cpp
src/tools/targetBuilder/: CMakeLists.txt  main.cpp
src/vision/ballDetection/: CMakeLists.txt  main.cpp
src/vision/targetDetection/: CMakeLists.txt  main.cpp
